# RGPZip

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py
.github/scripts/: build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.ps1  conan-deploy.ps1  conan-deploy.sh  conan-setup.ps1  conan-setup.sh
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  windows.yml
include/rgpaul/: RGPZip.hpp
src/: RGPZip.cpp  RGPZip.hpp
test/: RGPZipTests.cpp
